--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 
+<!DOCTYPE html>
+
+<html>
+
+  <head>
+    <title>1.4 - The World Wide Web</title>
+  </head>
+
+  <body>
+      <p>welcome to the www</p>
+  </body>
+  
+</html>
